# tcg-pocket-rl

./: .gitignore  README.md
data/: cards_complete.json  cards_final.json  cards_schema.json  cards_scraped.json
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/bridge/: action_map.rs  mod.rs  observation.rs  pymodule.rs
engine/src/data/: card.rs  deck.rs  loader.rs  mod.rs
engine/src/effects/: executor.rs  mechanics.rs  mod.rs  registry.rs
engine/src/game/: actions.rs  engine.rs  mod.rs  rng.rs  state.rs
engine/tests/: game_test.rs
python/: pyproject.toml
python/src/tcg_pocket_engine/: __init__.py
python/src/tcg_pocket_rl/: __init__.py  constraints.py  deck_optimizer.py  env.py  evaluate.py  train.py
scripts/: build_database.py  download_cards.py  eval_agent_vs_agent.py  finalize_cards.py  find_optimal_deck.py  fix_abilities.py  fix_missing_data.py  fix_remaining.py  merge_data.py  optimize_counter_deck.py  scrape_cards.py  train_agent.py  train_meta.py
