[package]
name = "tcg-pocket-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "tcg_pocket_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
regex-lite = "0.1"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
